// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stage > matches snapshot (camera loading) 1`] = `
<div
  class="StageRoot-sc-1xm1ov7-0 ilpDfB"
>
  <div
    aria-busy="true"
    class="StageViewport-sc-1xm1ov7-1 gmiJda"
  >
    <div
      aria-live="polite"
      class="StageLoader-sc-1xm1ov7-2 yTBbG"
      role="status"
    >
      <span
        aria-hidden="true"
        class="StageLoaderSpinner-sc-1xm1ov7-3 coeIY"
      />
      <p
        class="StageLoaderText-sc-1xm1ov7-4 dzVAqe"
      >
        Подключение камеры…
      </p>
    </div>
    <canvas
      class="StageCanvas-sc-1xm1ov7-5 hotvgB"
    />
  </div>
</div>
`;

exports[`Stage > matches snapshot (live canvas) 1`] = `
<div
  class="StageRoot-sc-1xm1ov7-0 ilpDfB"
>
  <div
    aria-busy="false"
    class="StageViewport-sc-1xm1ov7-1 gmiJda"
  >
    <canvas
      class="StageCanvas-sc-1xm1ov7-5 hotvgB"
    />
  </div>
</div>
`;

exports[`Stage > matches snapshot (paused) 1`] = `
<div
  class="StageRoot-sc-1xm1ov7-0 ilpDfB"
>
  <div
    aria-busy="false"
    class="StageViewport-sc-1xm1ov7-1 gmiJda"
  >
    <div
      aria-live="polite"
      class="StagePaused-sc-1xm1ov7-6 iRTIcc"
      role="status"
    >
      <p
        class="StagePausedText-sc-1xm1ov7-7 lkMaoE"
      >
        Упражнение приостановлено
      </p>
    </div>
  </div>
</div>
`;
